fix(Balance boxes buttons): New CSS rulesets.
- Fixed misalignment in Balance boxes buttons.
- Fixed wrong sizing in Balance boxes buttons.
- Fixed wrong border-radius in Balance boxes buttons.
- Fixed positioning of the Balance Boxes button area.

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -903,6 +903,8 @@ span.tabs-radio img.selected {
     font-weight: 600;
 }
 
+/* BALANCE BOXES BUTTONS */
+
 .wB-buttons {
     position: absolute;
     bottom: 0;
@@ -910,7 +912,7 @@ span.tabs-radio img.selected {
     width: 100%;
     height: 20%;
     padding: 1%;
-    margin-bottom: -1px;
+    margin-bottom: -4px;
 }
 
 .wB-buttons a {
@@ -920,7 +922,7 @@ span.tabs-radio img.selected {
 .wB-but {
     display: inline-block;
     position: relative;
-    width: 31%;
+    width: 32.4%;
     height: 80%;
     margin: .45%;
     background: #37556E;
@@ -938,7 +940,7 @@ span.tabs-radio img.selected {
 }
 
 .wB-butSend {
-    border-radius: 2px 2px 2px 12px;
+    border-radius: 2px 2px 2px 16px;
 }
 
 .wB-butRec {
@@ -946,7 +948,7 @@ span.tabs-radio img.selected {
 }
 
 .wB-butTrade {
-    border-radius: 2px 2px 12px 2px;
+    border-radius: 2px 2px 16px 2px;
 }
 
 .wB-but p {
